reply letter for mdm

--- a/report/decision_analytic/mdm/latex/bibliography.bib
+++ b/report/decision_analytic/mdm/latex/bibliography.bib
@@ -9,6 +9,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{bruinsma2018movember,
+  title={The Movember Foundation's GAP3 cohort: a profile of the largest global prostate cancer active surveillance database to date},
+  author={Bruinsma, Sophie M and Zhang, Liying and Roobol, Monique J and Bangma, Chris H and Steyerberg, Ewout W and Nieboer, Daan and Van Hemelrijck, Mieke and Movember Foundation's Global Action Plan Prostate Cancer Active Surveillance (GAP3) consortium and Trock, Bruce and Ehdaie, Behfar and others},
+  journal={BJU international},
+  volume={121},
+  number={5},
+  pages={737--744},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
 @article{bruinsma2016active,
   title={Active surveillance for prostate cancer: a narrative review of clinical guidelines},
   author={Bruinsma, Sophie M and Bangma, Chris H and Carroll, Peter R and Leapman, Michael S and Rannikko, Antti and Petrides, Neophytos and Weerakoon, Mahesha and Bokhorst, Leonard P and Roobol, Monique J and Ehdaie, Behfar and others},
@@ -29,6 +40,17 @@
   pages={106--115},
   year={2018},
   publisher={AME Publications}
+}
+
+@article{balasubramanian2003estimation,
+  title={Estimation of a failure time distribution based on imperfect diagnostic tests},
+  author={Balasubramanian, Raji and Lagakos, Stephen W},
+  journal={Biometrika},
+  volume={90},
+  number={1},
+  pages={171--182},
+  year={2003},
+  publisher={Oxford University Press}
 }
 
 @article{barnett2018optimizing,
@@ -83,6 +105,56 @@ number = {1},
 pages = {135--141},
 year = {2017},
 author = {Coley, Rebecca Yates and Zeger, Scott L and Mufaddal Mamawala and Pienta, Kenneth J and Carter, Herbert Ballentine}
+}
+
+@article{cookson1997,
+author = {Michael S. Cookson  and Neil E. Fleshner  and Scott M. Soloway  and William R. Fair },
+title = {Correlation between {Gleason} Score of Needle Biopsy and Radical Prostatectomy Specimen: Accuracy and Clinical Implications},
+journal = {Journal of Urology},
+volume = {157},
+number = {2},
+pages = {559-562},
+year = {1997}
+}
+
+@article{Ploussard2010,
+author = {Guillaume Ploussard  and Laurent Salomon  and Evanguelos Xylinas  and Yves Allory  and Dimitri Vordos  and Andras Hoznek  and Claude-Clément Abbou  and Alexandre de la Taille },
+title = {Pathological Findings and Prostate Specific Antigen Outcomes After Radical Prostatectomy in Men Eligible for Active Surveillance\&\#x2014;Does the Risk of Misclassification Vary According to Biopsy Criteria?},
+journal = {Journal of Urology},
+volume = {183},
+number = {2},
+pages = {539-545},
+year = {2010}
+}
+
+@article{Melia2006,
+author = {Melia, J and Moseley, R and Ball, R Y and Griffiths, D F R and Grigor, K and Harnden, P and Jarmulowicz, M and McWilliam, L J and Montironi, R and Waller, M and Moss, S and Parkinson, M C},
+title = {A UK-based investigation of inter- and intra-observer reproducibility of {Gleason} grading of prostatic biopsies},
+journal = {Histopathology},
+volume = {48},
+number = {6},
+pages = {644-654},
+year = {2006}
+}
+
+@article{Pinthus2006,
+author = {Jehonathan H. Pinthus  and Maciej Witkos  and N.E. Fleshner  and Joan Sweet  and Andrew Evans  and M.A. Jewett  and Murray Krahn  and Shabir Alibhai  and John Trachtenberg },
+title = {Prostate Cancers Scored as {Gleason} 6 on Prostate Biopsy are Frequently {Gleason} 7 Tumors at Radical Prostatectomy: Implication on Outcome},
+journal = {Journal of Urology},
+volume = {176},
+number = {3},
+pages = {979-984},
+year = {2006}
+}
+
+@article{Lattouf2002,
+author = {Lattouf, J.-B. and Saad, F.},
+title = {{Gleason} score on biopsy: is it reliable for predicting the final grade on pathology?},
+journal = {BJU International},
+volume = {90},
+number = {7},
+pages = {694-698},
+year = {2002}
 }
 
 @article{carvalho,
@@ -281,6 +353,28 @@ year={2016},
 publisher={Elsevier}
 }
 
+@article{goh2013clinical,
+  title={Clinical implications of family history of prostate cancer and genetic risk single nucleotide polymorphism (SNP) profiles in an active surveillance cohort},
+  author={Goh, Chee L and Saunders, Edward J and Leongamornlert, Daniel A and Tymrakiewicz, Malgorzata and Thomas, Karen and Selvadurai, Elizabeth D and Woode-Amissah, Ruth and Dadaev, Tokhir and Mahmud, Nadiya and Castro, Elena and others},
+  journal={BJU international},
+  volume={112},
+  number={5},
+  pages={666--673},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{telang2017prostate,
+  title={Prostate cancer family history and eligibility for active surveillance: a systematic review of the literature},
+  author={Telang, Jaya M and Lane, Brian R and Cher, Michael L and Miller, David C and Dupree, James M},
+  journal={BJU international},
+  volume={120},
+  number={4},
+  pages={464--467},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
 @article{bokhorst2015compliance,
 title={Compliance rates with the {Prostate Cancer Research International Active Surveillance (PRIAS)} protocol and disease reclassification in noncompliers},
 author={Bokhorst, Leonard P and Alberts, Arnout R and Rannikko, Antti and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Bangma, Chris H and Roobol, Monique J and {\relax PRIAS study group}},
@@ -397,3 +491,14 @@ isbn = {9781439872864}
   year={2012},
   publisher={INFORMS}
 }
+
+@article{ROBERTS2001576,
+title = {{PSA} Doubling Time as a Predictor of Clinical Progression After Biochemical Failure Following Radical Prostatectomy for Prostate Cancer},
+author={Roberts, Steven G and Blute, Michael L and Bergstralh, Erik J and Slezak, Jeffrey M and Zincke, Horst},
+journal = {Mayo Clinic Proceedings},
+volume = {76},
+number = {6},
+pages = {576--581},
+year = {2001}
+}
+
