--- a/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
@@ -9,4 +9,4 @@ Existing work on reducing the burden of biopsies in AS primarily advocates less 
 
 A limitation of the personalized approach is that the choice of risk threshold is not straightforward, as different thresholds lead to different combinations of the number of biopsies and the delay in detection of cancer progression. An approach is to choose a risk threshold which leads to personalized schedule dominant (e.g., 10\% risk) over the currently practiced schedules, for a given delay. Since personalized biopsy schedules are less burdensome, they may lead to better compliance. A second limitation is that the results that we presented are valid only in a 10 year follow-up period, whereas prostate cancer is a slow progressing disease. Thus more detailed results, especially for \textit{slow progressing} patients cannot be estimated. However, very few AS cohorts have a longer follow-period than PRIAS \cite{bruinsma2016active}. Another limitation is that our results are not valid when the patient data is missing not at random (MNAR).
 
-There are multiple ways to extend the personalized decision making approach. One such way is to account for competing risks (see Table \ref{table:prias_summary}) in the joint model. Since biopsy Gleason grading is susceptible to inter-observer variation \cite{coley2017}, accounting for it in our model will also be interesting to investigate further. To improve the decision making methodology, future consequences of a biopsy can be accounted in the model by combining Markov decision processes with joint models for time-to-event and longitudinal data. There is also a potential for including diagnostic information from magnetic resonance imaging (MRI), and quality of life measures in our model. However, given the scarceness of such information in the dataset, including it in the current model may not be feasible. We intend to further validate our results in a multi-center AS cohort, and subsequently develop a web application to assist in making shared decisions for biopsies.
+There are multiple ways to extend the personalized decision making approach. One such way is to account for competing risks (see Table \ref{table:prias_summary}) in the joint model. Since biopsy Gleason grading is susceptible to inter-observer variation \cite{coley2017}, accounting for it in our model will also be interesting to investigate further. To improve the decision making methodology, future consequences of a biopsy can be accounted in the model by combining Markov decision processes with joint models for time-to-event and longitudinal data. There is also a potential for including diagnostic information from magnetic resonance imaging (MRI), such as volume of prostate tumor as a longitudinal measurement in our model. The resulting predictions can be used to the decide the time of next MRI as well as to make a decision of biopsy. The same holds true for quality of life measures as well. However, given the scarceness of both MRI and quality of life measurements in the dataset, including them in the current model may not be feasible. We intend to further validate our results in a multi-center AS cohort, and subsequently develop a web application to assist in making shared decisions for biopsies.
