--- a/report/decision_analytic/mdm/latex/supplementary/jm_param_estimation.tex
+++ b/report/decision_analytic/mdm/latex/supplementary/jm_param_estimation.tex
@@ -43,7 +43,7 @@ $\mbox{DRE} = \mbox{T1c}$ (\%) & 23538/25606 (92\%) \\
 
 For all patients, PSA measurements (ng/mL) are scheduled every 3 months for the first 2 years and every 6 months thereafter. The DRE measurements are scheduled every 6 months. We use the DRE measurements as $\mbox{DRE} = \mbox{T1c}$ versus $\mbox{DRE} > \mbox{T1c}$. A DRE measurement equal to T1c \citep{schroder1992tnm} indicates a clinically inapparent tumor which is not palpable or visible by imaging, while tumors with $\mbox{DRE} > \mbox{T1c}$ are palpable.
 
-\textbf{Data Accessibility:} The PRIAS database is not openly accessible. However, access to the database on the basis of a by the PRIAS steering committee approved study proposal can be requested via the contact links on the website of the PRIAS program \url{www.prias-project.org}.
+\textbf{Data Accessibility:} The PRIAS database is not openly accessible. However, access to the database can be requested on the basis of a study proposal approved by the PRIAS steering committee. The website of the PRIAS program is \url{www.prias-project.org}.
 
 \subsection{Model Definition}
 \label{subsec:model_def}
