new code and response to MDM

--- a/report/decision_analytic/mdm/latex/bibliography.bib
+++ b/report/decision_analytic/mdm/latex/bibliography.bib
@@ -20,6 +20,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{meier2003discrete,
+  title={Discrete proportional hazards models for mismeasured outcomes},
+  author={Meier, Amalia S and Richardson, Barbra A and Hughes, James P},
+  journal={Biometrics},
+  volume={59},
+  number={4},
+  pages={947--954},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
 @article{bruinsma2016active,
   title={Active surveillance for prostate cancer: a narrative review of clinical guidelines},
   author={Bruinsma, Sophie M and Bangma, Chris H and Carroll, Peter R and Leapman, Michael S and Rannikko, Antti and Petrides, Neophytos and Weerakoon, Mahesha and Bokhorst, Leonard P and Roobol, Monique J and Ehdaie, Behfar and others},
@@ -98,7 +109,7 @@
 }
 
 @article{coley2017,
-title = {Prediction of the Pathologic {Gleason} Score to Inform a Personalized Management Program for Prostate Cancer},
+title = {Prediction of the pathologic {Gleason} score to inform a personalized management program for prostate cancer},
 journal = {European Urology},
 volume = {72},
 number = {1},
@@ -109,41 +120,42 @@ author = {Coley, Rebecca Yates and Zeger, Scott L and Mufaddal Mamawala and Pien
 
 @article{cookson1997,
 author = {Michael S. Cookson  and Neil E. Fleshner  and Scott M. Soloway  and William R. Fair },
-title = {Correlation between {Gleason} Score of Needle Biopsy and Radical Prostatectomy Specimen: Accuracy and Clinical Implications},
+title = {Correlation between {Gleason} score of needle biopsy and radical prostatectomy specimen: accuracy and clinical implications},
 journal = {Journal of Urology},
 volume = {157},
 number = {2},
-pages = {559-562},
+pages = {559--562},
 year = {1997}
 }
 
 @article{Ploussard2010,
-author = {Guillaume Ploussard  and Laurent Salomon  and Evanguelos Xylinas  and Yves Allory  and Dimitri Vordos  and Andras Hoznek  and Claude-Clément Abbou  and Alexandre de la Taille },
-title = {Pathological Findings and Prostate Specific Antigen Outcomes After Radical Prostatectomy in Men Eligible for Active Surveillance\&\#x2014;Does the Risk of Misclassification Vary According to Biopsy Criteria?},
-journal = {Journal of Urology},
-volume = {183},
-number = {2},
-pages = {539-545},
-year = {2010}
+  title={Pathological findings and prostate specific antigen outcomes after radical prostatectomy in men eligible for active surveillance—does the risk of misclassification vary according to biopsy criteria?},
+  author={Ploussard, Guillaume and Salomon, Laurent and Xylinas, Evanguelos and Allory, Yves and Vordos, Dimitri and Hoznek, Andras and Abbou, Claude-Cl{\'e}ment and De La Taille, Alexandre},
+  journal={The Journal of urology},
+  volume={183},
+  number={2},
+  pages={539--545},
+  year={2010},
+  publisher={Wolters Kluwer Philadelphia, PA}
 }
 
 @article{Melia2006,
 author = {Melia, J and Moseley, R and Ball, R Y and Griffiths, D F R and Grigor, K and Harnden, P and Jarmulowicz, M and McWilliam, L J and Montironi, R and Waller, M and Moss, S and Parkinson, M C},
-title = {A UK-based investigation of inter- and intra-observer reproducibility of {Gleason} grading of prostatic biopsies},
+title = {A UK-based investigation of inter-and intra-observer reproducibility of {Gleason} grading of prostatic biopsies},
 journal = {Histopathology},
 volume = {48},
 number = {6},
-pages = {644-654},
+pages = {644--654},
 year = {2006}
 }
 
 @article{Pinthus2006,
 author = {Jehonathan H. Pinthus  and Maciej Witkos  and N.E. Fleshner  and Joan Sweet  and Andrew Evans  and M.A. Jewett  and Murray Krahn  and Shabir Alibhai  and John Trachtenberg },
-title = {Prostate Cancers Scored as {Gleason} 6 on Prostate Biopsy are Frequently {Gleason} 7 Tumors at Radical Prostatectomy: Implication on Outcome},
+title = {Prostate cancers scored as {Gleason} 6 on prostate Biopsy are frequently {Gleason} 7 tumors at radical prostatectomy: implication on outcome},
 journal = {Journal of Urology},
 volume = {176},
 number = {3},
-pages = {979-984},
+pages = {979--984},
 year = {2006}
 }
 
@@ -153,7 +165,7 @@ title = {{Gleason} score on biopsy: is it reliable for predicting the final grad
 journal = {BJU International},
 volume = {90},
 number = {7},
-pages = {694-698},
+pages = {694--698},
 year = {2002}
 }
 
@@ -493,7 +505,7 @@ isbn = {9781439872864}
 }
 
 @article{ROBERTS2001576,
-title = {{PSA} Doubling Time as a Predictor of Clinical Progression After Biochemical Failure Following Radical Prostatectomy for Prostate Cancer},
+title = {{PSA} doubling time as a predictor of clinical progression after biochemical failure following radical prostatectomy for prostate cancer},
 author={Roberts, Steven G and Blute, Michael L and Bergstralh, Erik J and Slezak, Jeffrey M and Zincke, Horst},
 journal = {Mayo Clinic Proceedings},
 volume = {76},
