--- a/report/decision_analytic/mdm/latex/replyletter-1/ReplyLetterFirstPage.tex
+++ b/report/decision_analytic/mdm/latex/replyletter-1/ReplyLetterFirstPage.tex
@@ -1,10 +1,9 @@
 \documentclass[a4paper, 11pt]{letter}
 \usepackage{color,hyperref,verbatim}
 \usepackage{amsfonts,amsmath,graphicx,graphics}
-\renewcommand{\baselinestretch}{1.3}
+\renewcommand{\baselinestretch}{1.2}
 \setlength{\textwidth}{6.5in}
 \oddsidemargin=-2mm
-\evensidemargin=0mm
 \parskip=0.4cm
 %\addtolength{\topmargin}{-3.4cm} %\pagestyle{empty}
 
@@ -38,30 +37,27 @@
 
 \begin{document}
 
-\begin{letter}{Professor Alan Schwartz\\
-Department of Medical Education\\
-University of Illinois at Chicago\\
-Chicago, IL, 60612-7309\\
-USA}
+\begin{letter}{Professor Lauren E. Cipriano\\
+Department of Epidemiology \& Biostatistics\\
+University of Western Ontario\\
+London, Ontario, N6A 5C1\\
+Canada}
 
 \address{Department of Biostatistics\\
 Erasmus University Medical Center\\PO Box 2040, 3000 CA Rotterdam\\ the Netherlands
 }
 
-\opening{Dear Professor Schwartz,}
+\opening{Dear Professor Cipriano,}
 
 We are writing to you with respect to the manuscript \#MDM-19-037, titled ``Personalized Decision Making for Biopsies in Prostate Cancer Active Surveillance Programs'' submitted to \emph{Medical Decision Making} and the reports we received after its review. We would like to thank you for giving us the opportunity to submit a revised version of our paper that tackles the weaknesses of the previous version.
 
-Following the recommendations from the Reviewers, we have made changes in the revised version of the manuscript. In particular, we have added description for the model equations in the Methods section. We have also discussed the impact of increasing use of MRI on the findings reported in our paper.
+Following the recommendations from the Reviewers, we have made changes in the revised version of the manuscript. In particular, we have added explanations for the model equations to make them accessible to a wider audience. We have also discussed the impact of the increasing use of MRI on the findings reported in our paper. The ``clean'' version of the manuscript is titled ``main\_manuscript.pdf'', the manuscript with highlighted changes is titled ``edited\_manuscript.pdf'', and the appendices are compiled into a file titled ``supplementary.pdf''.
 
 Please find enclosed a detailed point-by-point response to the Reviewers' comments.\\
 
 Yours sincerely,
 
 the Authors
-
-
 %===========================================
-
 \end{letter}
 \end{document}
