--- a/report/decision_analytic/mdm/latex/replyletter-1/ref1_resp.tex
+++ b/report/decision_analytic/mdm/latex/replyletter-1/ref1_resp.tex
@@ -1,11 +1,13 @@
 		% !TEX root =  reply_letter.tex
 		\clearpage
 		\section*{Response to 1st Referee's Comments}
-		We would like to thank the Referee for their constructive comments, which have allowed us to considerably improve our paper. The main differences of the new version of the manuscript compared to the previous one can be found in Study Population section of the paper.
+		We would like to thank the Referee for their constructive comments, which have allowed us to considerably improve our paper. The main differences of the new version of the manuscript compared to the previous one can be found in the section titled ``Study Population''.
+
+		You may find below our responses to the specific issues raised.
 
 		\begin{enumerate}
 
-		    \item \underline{Risk calculator for clinicians for bringing the concept to practice}
+		    \item \underline{Risk calculator for the clinicians for bringing the concept to practice}
 
 		    We thank the Referee for their suggestion of a risk calculator. We have already developed a web-application for this purpose (Figure \ref{fig:webapp}). In this web-application doctors can load patient data via CSV files (and other formats such as SPSS files). To aid in shared decision making, the web-application not only estimates the cumulative risk of cancer progression at the current visit, but also on future visits. These estimates are time-dynamic, that is, they get updated as additional patient data is collected over time. In addition, patient-specific fitted PSA and DRE profiles and their future predictions are also provided. 
 
@@ -15,14 +17,15 @@
 				\label{fig:webapp}
 			\end{figure}
 
-			Although the web-application is ready, our model requires further validation. To this end, we are currently validating it using active surveillance data from the GAP3 database \citep{bruinsma2018movember}. The GAP3 database consists of patient data from multiple active surveillance cohorts around the world. Based on the current validation results so far, we expect the web-application to be also useful in other cohorts which are similar to PRIAS.
+			Although the web-application is ready, our model requires further validation. To this end, we are currently validating it using active surveillance data from the GAP3 database \citep{bruinsma2018movember}. The GAP3 database consists of patient data from multiple active surveillance cohorts around the world. Based on some of the initial validation results, we expect that the web-application and our model will also be useful in other cohorts that have a protocol and patient population similar to that of PRIAS.
 
 			\item \underline{Model robustness to Gleason score misclassification}
 
-			We thank the Referee for motivating us to check the robustness of our model against Gleason score misclassification. A biopsy Gleason score can be misclassified to be less than the pathological score (prostatectomy), or vice versa. Ignoring such misclassification will affect the parameter estimates as well risk predictions. 
+			We thank the Referee for motivating us to check the robustness of our model against Gleason score misclassification. A biopsy Gleason score can be misclassified to be less (or more) than the pathological score that is obtained after prostatectomy. Ignoring such misclassification will affect the parameter estimates as well risk predictions. However, since joint models utilize a relative risk sub-model for modeling time-to-event data, their robustness to misclassification is similar to relative risk models (e.g., Cox proportional hazards model). We next discuss the challenges in accounting for Gleason misclassification. 
 
-			\textbf{Impact of Gleason misclassification on parameter estimates:}
-			The impact of Gleason misclassification on parameter estimates depends upon the misclassification rate. Higher rates of misclassification may lead to a larger bias in the parameter estimates. In general, there is little consensus on the rate of Gleason misclassification \citep{cookson1997, Ploussard2010,Lattouf2002, Melia2006, Pinthus2006}. As is likely, the Gleason misclassification rate may vary between cohorts. Consequently, the right approach will be to find Gleason misclassification rates in the PRIAS program and utilize them to model pathological Gleason score as an outcome in our model \citep{balasubramanian2003estimation, coley2017}. However, in the PRIAS dataset such information is available only for the patients who opted for radical prostatectomy. The Gleason misclassification rate in such patients is roughly 4.5\%. This rate is much less than the misclassification rates reported in studies cited above. We currently lack information on misclassification rate in random sample of the population (likely higher than 4.5\%). Hence, accounting for it in the model is currently not feasible. Thus, the parameter estimates that we reported are only valid for the clinically relevant endpoint of upgrade in biopsy Gleason score. 
+			The impact of Gleason misclassification on our parameter estimates depends upon the misclassification rate as well as the difference between the time at which the underlying (pathological) Gleason score becomes 7 and the time of biopsy. When this time gap is larger it is more likely that disease has progressed. Consequently, the likelihood that a Gleason score higher than 7 is misclassified as Gleason 6 will become lower. The bias in parameter estimates is also directly proportional to the rate of misclassification. However, in general there is little consensus on the rate of Gleason misclassification. Estimates vary between 20\% to slightly over 50\% \citep{cookson1997, Ploussard2010,Lattouf2002, Melia2006, Pinthus2006}, which is likely due to variation between centers in terms of both patient population and policies. Thus, the right approach to account for misclassification is to find the misclassification rate specific to the PRIAS program and utilize it to model pathological Gleason score as an outcome in our model \citep{balasubramanian2003estimation, coley2017, meier2003discrete}. However, in the PRIAS dataset such information is available only for the patients who opted for radical prostatectomy. In such patients it is roughly 4.5\%, which is much less than the misclassification rates reported in the studies cited above. One possible explanation for a low rate is that such cases may be scrutinized more. We currently lack information on misclassification rate in a random sample of the population (rate potentially higher than 4.5\%). Hence, accounting for Gleason misclassification in the model is currently not feasible. 
+
+			Despite this, the proposed model and the parameter estimates are quite useful for predicting upgrade in biopsy Gleason score, which is the primary clinically relevant endpoint in most active surveillance programs. 
 
 			%\textbf{Impact of Gleason misclassification on risk prediction:}
 			%When a Gleason score of 7 or more is misclassified as a Gleason score of 6 or less, the patient is removed from active surveillance for treatment. Hence predictions from our model may not be used afterwards. We next discuss the alternative scenario wherein a Gleason score of 7 or more is misclassified as a Gleason score of 6 or less. In this case the patient remains in active surveillance and our model may be used to schedule biopsies.
