clinical paper introduction first cut

--- a/report/clinical/main_manuscript.tex
+++ b/report/clinical/main_manuscript.tex
@@ -48,7 +48,7 @@
 
 \begin{frontmatter}
 
-\title{Personalized Risk Based Decisions of Biopsies for Active Surveillance Prostate Cancer Patients\tnoteref{wordcount}}
+\title{Personalized Risk Based Shared Decision Making Framework for Biopsies in Prostate Cancer Active Surveillance\tnoteref{wordcount}}
 \tnotetext[wordcount]{Word Count Abstract: 300; Word Count Text: 2800}
 
 %% Group authors per affiliation:
@@ -94,6 +94,6 @@ Active Surveillance\sep Biopsies \sep Personalized Medicine\sep Prostate Cancer 
 
 \section*{References}
 
-\bibliography{mybibfile}
+\bibliography{bibliography}
 
 \end{document}
