--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -1,2 +1,3 @@
 % !TEX root =  ../main_manuscript.tex 
 \section{Discussion}
+Resources are more for only serious patients, better decisions like in the case of prostatectomy patients....so personalized approch can lead to better decisions overall as well
