--- a/report/clinical/mainmatter/abstract.tex
+++ b/report/clinical/mainmatter/abstract.tex
@@ -1,7 +1,7 @@
 % !TEX root =  ../main_manuscript.tex 
 \begin{abstract}
-\texttt{Background}: adadadad\\
-\texttt{Objective}: adadadad\\
+\texttt{Background}: Low-risk prostate cancer patients enrolled in active surveillance undergo repeat biopsies. Treatment is provided upon detection of biopsy Gleason upgrade.\\
+\texttt{Objective}: Reduce the number of biopsies for patients who do not need them\\
 \texttt{Design, Setting, and Participants}: adadadad\\
 \texttt{Outcome Measurements, and Statistical Analysis}: adadadad\\
 \texttt{Results and Limitations}: adadadad\\
